perf(fonts): improve performance by preloading fonts and avoid FOIT
The `<link rel="preload">` makes fonts to load faster and reduce layout shifts. the crossorigin attribute is needed, [see](https://stackoverflow.com/a/70878420/2149553)

About the `font-display: swap` property in `@font-face`:

- When the page loads, the browser immediately displays fallback text using a system font instead of hiding the text.

- As soon as the custom font is downloaded, the browser "swaps" the fallback font with the custom font.

If you don’t set font-display, many browsers will hide text (invisible) for up to 3 seconds (this is called `FOIT` – Flash of Invisible Text), waiting for the font to load. If it fails to load in time, fallback fonts are used.

--- a/src/index.css
+++ b/src/index.css
@@ -24,15 +24,33 @@
 @font-face {
   font-weight: normal;
   font-style: normal;
-  font-family: arsenica;
-  src: url("/fonts/ArsenicaTrial-Medium.ttf") format("truetype");
+  font-family: Arsenica;
+  src: url("/fonts/Arsenica/ArsenicaTrial-Medium.ttf") format("truetype");
+  font-display: swap;
 }
 
 @font-face {
   font-weight: bold;
   font-style: normal;
-  font-family: arsenica;
-  src: url("/fonts/ArsenicaTrial-Bold.ttf") format("truetype");
+  font-family: Arsenica;
+  src: url("/fonts/Arsenica/ArsenicaTrial-Bold.ttf") format("truetype");
+  font-display: swap;
+}
+
+@font-face {
+  font-weight: normal;
+  font-style: normal;
+  font-family: Arapey;
+  src: url("/fonts/Arapey/Arapey-Regular.ttf") format("truetype");
+  font-display: swap;
+}
+
+@font-face {
+  font-weight: normal;
+  font-style: italic;
+  font-family: Arapey;
+  src: url("/fonts/Arapey/Arapey-Italic.ttf") format("truetype");
+  font-display: swap;
 }
 
 body {
@@ -93,7 +111,7 @@ img {
   padding-block: calc(var(--fs-h1) / 5);
   font-weight: normal;
   font-size: var(--fs-h1);
-  font-family: arsenica, cursive;
+  font-family: Arsenica, cursive;
   line-height: 1.1;
   text-align: center;
   transform: translate(-50%, -50%);
